--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>com.springboot.app.commons</groupId>
+			<artifactId>service-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.springboot.app.commons</groupId>
 			<artifactId>service-commons</artifactId>
